[gd_scene load_steps=11 format=3 uid="uid://cy8kytnfbyfnc"]

[ext_resource type="Theme" uid="uid://cu4aaumdpt78y" path="res://scenes/Ui/game_ui_theme.tres" id="1_34mwa"]
[ext_resource type="Texture2D" uid="uid://oktc65s3ullj" path="res://asset/ui/Basic_tools_and_meterials.png" id="2_3u076"]
[ext_resource type="Script" uid="uid://bfwl6dxt6lcuy" path="res://scenes/Ui/tools_panel.gd" id="2_8mx8w"]
[ext_resource type="Texture2D" uid="uid://cncgo5id6vas8" path="res://asset/ui/Basic_Plants.png" id="3_8mx8w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ooj27"]
atlas = ExtResource("2_3u076")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6gupw"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-f31e2f33715d556677e3b769318d464c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_im1a5"]
atlas = SubResource("CompressedTexture2D_6gupw")
region = Rect2(34, 0, 13, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2d6w"]
atlas = ExtResource("2_3u076")
region = Rect2(0, 4, 16, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gupw"]
atlas = ExtResource("3_8mx8w")
region = Rect2(2, 2, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mx8w"]
atlas = ExtResource("3_8mx8w")
region = Rect2(2, 18, 12, 13)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 171.0
offset_bottom = 49.0
theme = ExtResource("1_34mwa")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_8mx8w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_ooj27")
icon_alignment = 1

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_im1a5")
icon_alignment = 1

[node name="Watering" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_i2d6w")
icon_alignment = 1

[node name="Corn" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_6gupw")
icon_alignment = 1

[node name="Tomato" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_8mx8w")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Watering" to="." method="_on_watering_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Corn" to="." method="_on_corn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Tomato" to="." method="_on_tomato_pressed"]
